--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@clerk/nextjs": "^5.5.2",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@uploadthing/react": "^7.0.1",
     "axios": "^1.7.7",
@@ -32,7 +35,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.0.1",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -43,6 +47,7 @@
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
